; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CiLoadIni.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CiLoadIni.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CLIENT_CUSTOM_INI_FILENAME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @CiLoadIni() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = load i32, i32* @CLIENT_CUSTOM_INI_FILENAME, align 4
  %5 = call i32* @ReadDump(i32 %4)
  store i32* %5, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %0
  store i32* null, i32** %1, align 8
  br label %15

9:                                                ; preds = %0
  %10 = load i32*, i32** %2, align 8
  %11 = call i32* @ReadIni(i32* %10)
  store i32* %11, i32** %3, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @FreeBuf(i32* %12)
  %14 = load i32*, i32** %3, align 8
  store i32* %14, i32** %1, align 8
  br label %15

15:                                               ; preds = %9, %8
  %16 = load i32*, i32** %1, align 8
  ret i32* %16
}

declare dso_local i32* @ReadDump(i32) #1

declare dso_local i32* @ReadIni(i32*) #1

declare dso_local i32 @FreeBuf(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
